[package]
name = "lightstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75" 
foundationdb = { version = "0.8.0", features = ["embedded-fdb-include"] }
futures = "0.3.28"
scylla = "0.9.0"
tokio = { version = "1.32.0", features = ["full"] }
