[package]
name = "lightstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75" 
async-trait = "0.1.73"
byteorder = "1.4.3"
bytes = "1.4.0"
dashmap = "5.5.3"
foundationdb = { version = "0.8.0", features = ["embedded-fdb-include"] }
futures = "0.3.28"
multimap = "0.9.0"
ractor = "0.9.0"
rand = "0.8.5"
ratelimit = "0.7.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tonic = "0.10"
prost = "0.12"
tower = "0.4.13"
dotenv = "0.15.0"
object_store = { version = "0.7.0", features = ["aws"] }
opendal = "0.40.0"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "lightstream"
path = "src/pubsub_server.rs"

[[bin]]
name ="s3"
path = "src/s3.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "grpc-client"
path = "src/client.rs"

[build-dependencies]
tonic-build = "0.10"
